# devcontainer-smoke-test

./: .gitignore  .pre-commit-config.yaml  .vig-os  CHANGELOG.md  README.md  justfile.local  justfile.project  pyproject.toml
.devcontainer/: CHANGELOG.md  README.md  devcontainer.json  docker-compose.local.yaml  docker-compose.yml  justfile.base  justfile.devc  justfile.gh  justfile.worktree
.devcontainer/scripts/: init-git.sh  init-precommit.sh  initialize.sh  post-attach.sh  post-create.sh  post-start.sh  setup-git-conf.sh  verify-auth.sh  version-check.sh
.github/: agent-blocklist.toml  label-taxonomy.toml
.github/workflows/: ci-container.yml  ci.yml  codeql.yml  prepare-release.yml  promote-release.yml  release-core.yml  release-extension.yml  release-publish.yml  release.yml  repository-dispatch.yml  scorecard.yml  sync-issues.yml  sync-main-to-dev.yml
docs/: container-ci-quirks.md
docs/issues/: issue-1.md  issue-106.md  issue-13.md  issue-16.md  issue-22.md  issue-3.md  issue-6.md  issue-78.md  issue-81.md  issue-88.md
docs/pull-requests/: pr-10.md  pr-100.md  pr-101.md  pr-102.md  pr-103.md  pr-104.md  pr-105.md  pr-107.md  pr-108.md  pr-109.md  pr-11.md  pr-110.md  pr-111.md  pr-112.md  pr-113.md  pr-114.md  pr-115.md  pr-116.md  pr-117.md  pr-118.md  pr-119.md  pr-12.md  pr-120.md  pr-121.md  pr-122.md  pr-123.md  pr-124.md  pr-125.md  pr-126.md  pr-127.md  pr-128.md  pr-129.md  pr-130.md  pr-131.md  pr-132.md  pr-133.md  pr-134.md  pr-135.md  pr-136.md  pr-137.md  (+97 more)
src/devcontainer_smoke_test/: __init__.py
tests/: __init__.py  test_example.py
(+2 files in other folders)
